@@ -2,20 +2,23 @@
 Hash: SHA256
 
 DIST linkers-and-loaders-1.tar.lzma 7346038 SHA256 a8cec2a91242c629a14201c495a50827e90c8d7ab2f3696bdf7c8a794fbe5211 SHA512 65aa03a4edc9da009f49f3dd5540cc84a64d001d04f12f5f4ea152be5cb246a2b54d0db16bed6d8b764b64fad564227e566504adb5fb9172808b124e0aa79f22 WHIRLPOOL f332dfc584ecace8c1744fdc7a5ba11140e93ceefd0692420600521da5950b61c6ffcd73cbb2b5ce7f65524e0a0e0f76bd4831e8b1886f6736363de27ba1babb
-EBUILD linkers-and-loaders-1.ebuild 681 SHA256 0af884a720f7f4fa016183055c34c759a39f81b4283c71d367a9aab52842e5b8 SHA512 0cb7c00704567f1f2d71e8f108dffe330a804936736eec7954dacfb315e8b767a2ac511fde5cc8c95d1aeb60c39b10b6a4986154834f1f8a73b014acfb4e7ed9 WHIRLPOOL 7ba219ce9719db09f5c6fc746b8662a92d5b34435796709785f49488bdb6435c14bc2a1b20d5167bbd9195f0fdd5dadffe1cf04d791e6ec4ac44a8b22130c0cc
-MISC ChangeLog 1543 SHA256 1c0d608c99bada1f5e5442f7af1eceb27d530b5ce71c84197b1cd99000834797 SHA512 3b23c2257be5ece571efa2d7709f86b7f3af29db8f9e507c424f83664e2d24504686f0a2ac94fa92270f5793955737074defdbe3bc3ac562b84eee9a6fbec4b2 WHIRLPOOL efd0b7c8005d8b2eb1620b8668db906cab5a4f77e9e9959c756619b50f21fb05f688288b3f8b2658451c8661f90fabf7f11a734c004e99ea2f5783cd6b58e7ca
+EBUILD linkers-and-loaders-1.ebuild 693 SHA256 9d934591cb926d20832cb1d6348ed23dacfc22dc23bf6f25dcda547d0d49d511 SHA512 f44b3af00b44a641e119a0c6613118cbc38a9af98faf54f915ccf0c524a9a7772b9e8a0d0324b7c573ce92dfc3306cb68ad2e3ff5317aae05660d2455e16e1f0 WHIRLPOOL 65a476dbf61c1035cefc44ce677134469adab699d7338d0455657ab2655e0af1005b620736ddfce3d58409baaae967699b999cb9f2b9a39e3fa90329f0f483fd
+MISC ChangeLog 1677 SHA256 6a16d3d71cd5c657d5b6da77da195c8340a3195be465f7c6223f2f74bc1eae2a SHA512 00bdf2f08a49086494a4396f1e113b4820b557f05746edeaf8c122d8fd9047ef1c7b86c0856f42d908fea3905ee07dd8a60aa984b4166fe2381a7948ec80a36f WHIRLPOOL 9435abe61702b2970f7bd27662f4bb788fae6bb4e3a78478d742e794c326f58c9febea24c1ac19e11d85a0d25cfafc6b46fd656dcbbd68c649f78e83c20a7cfd
 MISC metadata.xml 200 SHA256 eb63f2affd0b8e3f5149df2f2f964910eb2127b650919a9e7892fae011e2b22b SHA512 da94c752d3f451652f15c0c459caa079e1d11f37278f86da057ed915ba167688ea62ec62c3c6406200fa951f8f495e9dd782d0e12f9e315187ba4de305f13a1d WHIRLPOOL 80bd517227281caf99e291cd59cd6e5deec972d693473727c7dcd6195450ea9dca63a151e52111c7c2456831f19113008ec60a5c1a66cc3b24f8b17c74e2c373
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2
 
-iQGcBAEBCAAGBQJRWYXdAAoJEJQzkH1pP7W4veIMAI/IWBl/IDxyAJkllqaKPmo6
-fPGwD5cgLQPg36cOdf/LgrdoHZbasdcTwPf6VdOZE/YpzyXgp3+TMxaVyemVbxso
-jZQQW1NYci+T7FsD/T6ivuQnaR6srcCumj3JtFQRpceC1RHvp/O//8ixH3dxc9Xv
-CHC873dAu/dx50wLl8X79pjj1zw41awltK1yh7vT47yJim/LYUPHhhAW4knn6XDB
-uuN7Xe49ddmsC6IvmMy6v6UhiSvFzhuxpFPJYxdMhtRPsN3I93HlUxVbEo3CJ2wu
-30+8yWYJZpzP1v0MF66rnZmBku8rQO1Gxe2wSAkMywwZNpL/DhnR+vo/l9IRBIEJ
-CMaVs2LYFGzUZ6exPBpKkNNLI8bEFYaOKmWEMWdj42a3kc4ZJVaFYlUEpJfJCQT0
-znBDXbrpY7AYiyDvLiblHB/qAuhlnbzQTZS+xwzT3AhwDtgsvLZ5/AH48fvo2nbp
-InxcW4+kwN+7ud1O+o+RmGWMrIyXKMsj7ztwvH9Jrg==
-=fOM2
+iQIcBAEBCAAGBQJUXB6nAAoJEPGu1DbS6WIAZkMP/2LQe4ZJGVvfa41ukWqldJta
+R8BMzM4wwEA6uGecIHymuRM3KT1LceCiShFKZ2dsEClSlRnUHldhK6dCMJN9IEo5
+tH5ZzihzVbtLTdauJwn6AVDz7rANS3jv2jNYFnp2SoGsJkQm/KSwrNTRjfoJCANr
+hPjdOUDD8KaHFKWx4G2GyM5K71dzNjVuI4oRb8cNUtOjvo1RHdsxeQDc69NZo834
+BTCsnDWZbshCPZLXjpK3ESFJAE0AKU6NZS8wHK7MmbPwb6Px+Y1UNdN7kCCcbd8O
+ejuVowWR8Aq+7Xn2Ktf1LnjHBGTmiEnWWRDA7X4h5ZgKbTDQtPSdsEYex/ITjyLl
+aLX1Gu66gvPjFgu8Bl35xh9c8WYIKxZHTRm9t4pB0rRwTpGngL4lUarS05sD9+Ka
+S3VOFnrWyv/WZVOXciyq9F28So0hNFLyPu2tzJBj57zFrBc4UTItmN4mMMXZDmh/
+xn1JEmJcaF6F39P0VrDoexwUvtA6ICiTMReaSwBTV/q/ogJRi89pncEG6xXPfbOD
+TelKBM1CZS31DDfPwa9AMB3Nr/4GmLq3Xg0kNLq7zgTeGvH5XhlPKB0o868Bh61H
+Pbl+H9L2wRjFtwTI9bMmKx2MZvHt17Q+A/Z0y2jH6Mg+IgYYnEpTwSs0VQmHEClD
+r1+tG+Pc0JgsmVPSBxyE
+=xSrV
 -----END PGP SIGNATURE-----
