@@ -2,13 +2,13 @@
 Hash: SHA256
 
 DIST cudf-0.7.tar.gz 54821 SHA256 92c8a9ed730bbac73f3513abab41127d966c9b9202ab2aaffcd02358c030a701 SHA512 6adf17c076c0308416f6f8bccb361d03645909f535e6cd0ba34860706e5f26628d33ab4f208fb8def28de1499649279febafd895bdde498f35a77e06128e64fa WHIRLPOOL 798ca87c1cc48d00e62a1e6d627fe6d35839fb16d6b2b10ba42f3eea29e3a48e2f5b070b93647a53833a471b1a6a665e759ab3b7cc2bda238d2dec4a8eb0866e
-EBUILD cudf-0.7.ebuild 926 SHA256 9d6691ac8ef99158311b0b8fb0507a55348338107f039a18f8ffdac589e5f9f2 SHA512 827597703ece60659e6a0c8e75f847bc89f0c23085ac1ab460e9959ec815bb66affda6e0019b2827adc9ed043ae9ec387907865abb0ad4d0996cdf5fe32e6214 WHIRLPOOL 3c24b05215b180ac7a9ef8d84f26ceb1f251d9e54092f85aae8e8cb84ec59be057ba6352f39e57c4a5ea5a65fc14ab8cec6cc4dc4eeac7f10ed106ebe08d438f
-MISC ChangeLog 424 SHA256 c70761c48f3e21a08c9c41a0bedb8d3747fb9594f0155b2db78967e732e8d589 SHA512 7c084daa8dee7cb0ba97e229eb96c2c18fa86ab959bc25af7f8b401856e9fe483d41ba558ad7f5a7478989979806627042b6d7919139ab1dd593242fbc452937 WHIRLPOOL 540dd5646fcf90542f578b2b5f8d8b89459d528327d7460668af73c1f06aa66553d49429a03983a734f13e4fb45253d7816a2330869e55e21d586c08603d23fc
+EBUILD cudf-0.7.ebuild 1351 SHA256 5d39321a3905ff29ccaf5352907598f3209eaa33dfe6742b7f2ad784642d6f5b SHA512 6d7dba05a06d3bc3995350668d15e31976a51a565399f3a5aeca5b2058b3eeb1fc920ac47c5e29989c8a48253b92857da4222b72ff46ece6e2725f4586ace5bb WHIRLPOOL 6777ba61c2c5e324485ff93bc7ad1808041287ed9ed56ca2545e56a564a04e993c3d43b36bace1b8cec618ca727c8176a4e19c0048da26b9205ddf9a7cbf43ef
+MISC ChangeLog 546 SHA256 0f9d4632e7c7931834dc297f8b880f8d4d194c81ce778f135cce75fb93172e96 SHA512 4f1e3c9d39b1f03efe7066450f4cd650fefb76f3b23a1ae3ad384194246f7719ccc461ab181135d5789c71060a621685965e2c14db907d5ef5fdd1c078467c2b WHIRLPOOL 9572232f52b8baa97b5e833d41f648c55e061dc22c184987a9e84daa3c587a4e974e857841c5f52d03da517a130226d887ed41d6fd6c80b4a18326efa88089bb
 MISC metadata.xml 155 SHA256 118048376ebb76f57628b0819f3de4856e73959c2578c88715d37ea2d1e0af81 SHA512 a525f91dd332fc144c42d1437bdae9c889cbcece6294c2d2f4baf6a532ac2e13492736e75b41c83fac31033a9ae53c37deb96286a5ab8575611136617640952c WHIRLPOOL 71a9c7aaf4e268c65c0d1e30e343911ccbcf99ef8c23773abc2b3af8d58d9f7d5c09632805d8ba9050c09eef629f2b340db9eb9ba8b9cd2e5d655fce3f91fcb6
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlRKDzoACgkQvFcC4BYPU0osKQCfTjrb8e9x2GktDrxHYJNqSqES
-S2kAoMDs82M4O5xXoha+cM18SG4fLlBQ
-=EfWr
+iEYEAREIAAYFAlRcG38ACgkQVWmRsqeSphNmhACfe9w3PL9GzZLiu/wy/XKgBHnU
+FhcAn3t5Mk/z8k6fBBA6/qP58ZJJHRAy
+=Gs0I
 -----END PGP SIGNATURE-----
