@@ -1,4 +1,4 @@
-DEFINED_PHASES=compile install test
+DEFINED_PHASES=compile install prepare test
 DEPEND=>=dev-lang/ocaml-3.12:=[ocamlopt?] dev-ml/extlib:= dev-libs/glib:2 test? ( dev-ml/ounit ) dev-ml/findlib dev-lang/perl
 DESCRIPTION=Library to parse, pretty print, and evaluate CUDF documents
 EAPI=5
@@ -10,4 +10,4 @@ RDEPEND=>=dev-lang/ocaml-3.12:=[ocamlopt?] dev-ml/extlib:= dev-libs/glib:2
 SLOT=0/0.7
 SRC_URI=https://gforge.inria.fr/frs/download.php/file/33593/cudf-0.7.tar.gz
 _eclasses_=multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac
-_md5_=d1945bcd7aa0e58243fd7cdbe7bdcd1c
+_md5_=57791aacc51c7e1400ad95069ff77bfa
