@@ -1,6 +1,9 @@
 # ChangeLog for dev-ml/cudf
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ml/cudf/ChangeLog,v 1.2 2014/10/24 08:35:05 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ml/cudf/ChangeLog,v 1.3 2014/11/07 01:08:13 jer Exp $
+
+  07 Nov 2014; Jeroen Roovers <jer@gentoo.org> cudf-0.7.ebuild:
+  Fix building against sys-libs/ncurses[tinfo] (bug #527472).
 
   24 Oct 2014; Alexis Ballier <aballier@gentoo.org> cudf-0.7.ebuild:
   add sublot
